fix block folding on IE

--- a/telemeta/htdocs/css/telemeta.css
+++ b/telemeta/htdocs/css/telemeta.css
@@ -489,6 +489,7 @@ dl.dublincore dd.caption {
 }
 
 .extraInfos h4 a {
+    position: relative;
     display: block;
     color: #333 !important;
     text-decoration: none;
